{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 994,
  "lineage": "5f494e67-b2ee-a052-3d96-aaf5ac2d101e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instancia_App_Web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-5b41123e",
            "arn": "arn:aws:ec2:us-east-1:111782448634:instance/i-0ab504636cfff190a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab504636cfff190a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ParaSSH",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edc8ea4db58a66a3",
            "private_dns": "ip-172-30-11-250.ec2.internal",
            "private_ip": "172.30.11.250",
            "public_dns": "ec2-35-175-177-63.compute-1.amazonaws.com",
            "public_ip": "35.175.177.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f1e83b48177cb668",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e5447f02636ec5b",
            "tags": {
              "Name": "App_Web 0"
            },
            "tags_all": {
              "Name": "App_Web 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a783e5d8b99b9463"
            ]
          },
          "dependencies": [
            "aws_security_group.Puertos_Instancias",
            "aws_subnet.AZ_Subnet_e-Commerce",
            "aws_vpc.vpc_e-Commerce"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-5b41123e",
            "arn": "arn:aws:ec2:us-east-1:111782448634:instance/i-09a298c6f2364efdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a298c6f2364efdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ParaSSH",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0777cf925b4380ac3",
            "private_dns": "ip-172-30-12-77.ec2.internal",
            "private_ip": "172.30.12.77",
            "public_dns": "ec2-3-95-240-54.compute-1.amazonaws.com",
            "public_ip": "3.95.240.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0127cd35c24187db0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042f61378dc7fc449",
            "tags": {
              "Name": "App_Web 1"
            },
            "tags_all": {
              "Name": "App_Web 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a783e5d8b99b9463"
            ]
          },
          "dependencies": [
            "aws_security_group.Puertos_Instancias",
            "aws_subnet.AZ_Subnet_e-Commerce",
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW_vpc_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:internet-gateway/igw-0d9e9c98eda5555f1",
            "id": "igw-0d9e9c98eda5555f1",
            "owner_id": "111782448634",
            "tags": {
              "Name": "GW-VPC Solucion e-Commerce"
            },
            "tags_all": {
              "Name": "GW-VPC Solucion e-Commerce"
            },
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LB_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111782448634:loadbalancer/app/LB-e-Commerce/a36261c945ef2a01",
            "arn_suffix": "app/LB-e-Commerce/a36261c945ef2a01",
            "dns_name": "LB-e-Commerce-1110998327.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:111782448634:loadbalancer/app/LB-e-Commerce/a36261c945ef2a01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LB-e-Commerce",
            "security_groups": [
              "sg-00d400a54621a67ab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-042f61378dc7fc449"
              },
              {
                "subnet_id": "subnet-04e5447f02636ec5b"
              }
            ],
            "subnets": [
              "subnet-042f61378dc7fc449",
              "subnet-04e5447f02636ec5b"
            ],
            "tags": {
              "Description": "Balanceador del sitio e-Commerce",
              "Entorno": "Produccion"
            },
            "tags_all": {
              "Description": "Balanceador del sitio e-Commerce",
              "Entorno": "Produccion"
            },
            "vpc_id": "vpc-00445ce01e7693af9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.GW_vpc_e-Commerce",
            "aws_security_group.PuertosLoadBalancer",
            "aws_subnet.AZ_Subnet_e-Commerce",
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LB_e-Commerce_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111782448634:listener/app/LB-e-Commerce/a36261c945ef2a01/59af9480d8366adb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:111782448634:targetgroup/LB-e-Commerce-App-Pool/1761dcf271fe92e9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111782448634:listener/app/LB-e-Commerce/a36261c945ef2a01/59af9480d8366adb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111782448634:loadbalancer/app/LB-e-Commerce/a36261c945ef2a01",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW_vpc_e-Commerce",
            "aws_lb.LB_e-Commerce",
            "aws_lb_target_group.LB_e-Commerce_App_Pool",
            "aws_security_group.PuertosLoadBalancer",
            "aws_subnet.AZ_Subnet_e-Commerce",
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "LB_e-Commerce_App_Pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111782448634:targetgroup/LB-e-Commerce-App-Pool/1761dcf271fe92e9",
            "arn_suffix": "targetgroup/LB-e-Commerce-App-Pool/1761dcf271fe92e9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:111782448634:targetgroup/LB-e-Commerce-App-Pool/1761dcf271fe92e9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "LB-e-Commerce-App-Pool",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "LB_e-Commerce_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "Main_tabla_vpc_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd0c267f81ba5c6",
            "original_route_table_id": "rtb-08a0bed5d2379496a",
            "route_table_id": "rtb-05136e2016b096c8c",
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "dependencies": [
            "aws_internet_gateway.GW_vpc_e-Commerce",
            "aws_route_table.tabla_vpc_e-Commerce",
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tabla_vpc_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:route-table/rtb-05136e2016b096c8c",
            "id": "rtb-05136e2016b096c8c",
            "owner_id": "111782448634",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9e9c98eda5555f1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla de rutas vpc_e-Commerce"
            },
            "tags_all": {
              "Name": "Tabla de rutas vpc_e-Commerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW_vpc_e-Commerce",
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PuertosLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:security-group/sg-00d400a54621a67ab",
            "description": "SG asociado al Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puertos de salida habilitados",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d400a54621a67ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puerto HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puerto HTTPs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "PuertosLoadBalancer",
            "name_prefix": "",
            "owner_id": "111782448634",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_LB_e-Commerce"
            },
            "tags_all": {
              "Name": "SG_LB_e-Commerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Puertos_Instancias",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:security-group/sg-0a783e5d8b99b9463",
            "description": "Puertos abiertos en instancias",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puertos en Instancias",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a783e5d8b99b9463",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puerto SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.30.10.0/24"
                ],
                "description": "Puerto HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Puertos_Instancias",
            "name_prefix": "",
            "owner_id": "111782448634",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Puertos en Instancias de e-Commerce"
            },
            "tags_all": {
              "Name": "Puertos en Instancias de e-Commerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AZ_Subnet_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:subnet/subnet-04e5447f02636ec5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.30.11.0/24",
            "id": "subnet-04e5447f02636ec5b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111782448634",
            "tags": {
              "Description": "Subnet de Instancias",
              "Name": "AZ0_Subnet_e-Commerce_0"
            },
            "tags_all": {
              "Description": "Subnet de Instancias",
              "Name": "AZ0_Subnet_e-Commerce_0"
            },
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:subnet/subnet-042f61378dc7fc449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.30.12.0/24",
            "id": "subnet-042f61378dc7fc449",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111782448634",
            "tags": {
              "Description": "Subnet de Instancias",
              "Name": "AZ1_Subnet_e-Commerce_1"
            },
            "tags_all": {
              "Description": "Subnet de Instancias",
              "Name": "AZ1_Subnet_e-Commerce_1"
            },
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_DB_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:subnet/subnet-06b72aa8dace0a15b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.30.13.0/24",
            "id": "subnet-06b72aa8dace0a15b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111782448634",
            "tags": {
              "Description": "Subnet para la base de datos de e-Commerce",
              "Name": "Subnet_DB_e-Commerce"
            },
            "tags_all": {
              "Description": "Subnet para la base de datos de e-Commerce",
              "Name": "Subnet_DB_e-Commerce"
            },
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_LB_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:subnet/subnet-0a57af99343301246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.30.10.0/24",
            "id": "subnet-0a57af99343301246",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111782448634",
            "tags": {
              "Description": "Subnet del LB",
              "Name": "Subnet_LB_e-Commerce"
            },
            "tags_all": {
              "Description": "Subnet del LB",
              "Name": "Subnet_LB_e-Commerce"
            },
            "vpc_id": "vpc-00445ce01e7693af9"
          },
          "dependencies": [
            "aws_vpc.vpc_e-Commerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_e-Commerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111782448634:vpc/vpc-00445ce01e7693af9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-01ca17673e19be76c",
            "default_route_table_id": "rtb-08a0bed5d2379496a",
            "default_security_group_id": "sg-0aa86f6064f96f759",
            "dhcp_options_id": "dopt-9b6b71e1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00445ce01e7693af9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a0bed5d2379496a",
            "owner_id": "111782448634",
            "tags": {
              "Description": "VPC Solucion e-Commerce",
              "Name": "vpc_e-Commerce"
            },
            "tags_all": {
              "Description": "VPC Solucion e-Commerce",
              "Name": "vpc_e-Commerce"
            }
          }
        }
      ]
    }
  ]
}